# verbatim

./: .gitignore  Cargo.toml  README.md  RELEASING.md  Summary.md  package-lock.json
.cargo/: config.toml
assets/: verbatim.desktop
homebrew-verbatim/Formula/: verbatim.rb
journey/: 0001-fix-openai-costs-parsing.md  0002-fix-llm-model-loading-duplicate-tensor.md  0003-cuda-default-gpu-error-ui.md  0004-fix-cuda-vulkan-backend-conflict.md
scripts/: .macos-signing.env.example  build-release.sh  package-release.py
src/: app.rs  clipboard.rs  config.rs  errors.rs  main.rs  model_manager.rs  platform.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chime.rs  commands.rs  main.rs  state.rs  tray.rs
src/audio/: capture.rs  resampler.rs
src/db/: mod.rs  schema.rs
src/hotkey/: evdev_listener.rs  mod.rs
src/input/: enigo_backend.rs  mod.rs
src/stt/: mod.rs  openai.rs  whisper_local.rs
src/tray/: mod.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/feature/: DayUsageTooltip.tsx  HoverTooltip.tsx  Layout.tsx  Sidebar.tsx  TopBar.tsx
ui/src/components/ui/: EmojiPicker.tsx  Select.tsx  Toast.tsx
ui/src/i18n/: index.ts
ui/src/i18n/local/de/: translation.ts
ui/src/i18n/local/en/: translation.ts
ui/src/i18n/local/es/: translation.ts
ui/src/i18n/local/fr/: translation.ts
ui/src/i18n/local/ja/: translation.ts
ui/src/lib/: compatibility.ts  ollama-catalog.ts  prompts.ts  tauri.ts  theme.ts  throughput.ts  tokenEstimate.ts  types.ts  whisper-catalog.ts
ui/src/pages/: NotFound.tsx
ui/src/pages/about/: page.tsx
ui/src/pages/api-keys/: page.tsx
ui/src/pages/api-usage/: page.tsx
ui/src/pages/home/: page.tsx
ui/src/pages/home/components/: ActivityChart.tsx  Greeting.tsx  RecentTranscriptions.tsx  StatsCards.tsx
ui/src/pages/onboarding/: page.tsx
ui/src/pages/post-processing/: page.tsx
ui/src/pages/recordings/: page.tsx
ui/src/pages/recordings/components/: RecordingInterface.tsx  RecordingsList.tsx
ui/src/pages/settings/: HotkeyButton.tsx  PasteKeyButton.tsx  page.tsx
ui/src/pages/settings/components/: DebugSection.tsx  RotationAdvanced.tsx  SettingRow.tsx
ui/src/pages/speech-to-text/: page.tsx
ui/src/pages/word-count/: page.tsx
ui/src/router/: config.tsx  index.ts
ui/src/store/: index.ts  useRotationBridge.ts  useTauriListeners.ts
ui/src/store/slices/: balanceSlice.ts  configSlice.ts  modelsSlice.ts  rotationSlice.ts  statsSlice.ts  sttSlice.ts  themeSlice.ts  transcriptionsSlice.ts
verbatim-core/: Cargo.toml  build.rs
verbatim-core/src/: app.rs  clipboard.rs  config.rs  errors.rs  gpu_detect.rs  keyring_store.rs  lib.rs  llm_inference.rs  llm_model_manager.rs  model_manager.rs  ollama_manager.rs  platform.rs  post_processing.rs  provider_error.rs  rotation.rs  test_helpers.rs
verbatim-core/src/audio/: capture.rs  mod.rs  noise_cancel.rs  resampler.rs  silence.rs
verbatim-core/src/db/: mod.rs  schema.rs
verbatim-core/src/hotkey/: evdev_listener.rs  macos_listener.rs  mod.rs
verbatim-core/src/input/: enigo_backend.rs  mod.rs  terminal_detect.rs  window_detect.rs
verbatim-core/src/stt/: deepgram.rs  mod.rs  openai.rs  smallest.rs  whisper_local.rs
