[package]
name = "verbatim"
version = "0.2.0"
edition = "2021"
description = "Real-time speech-to-text with push-to-talk hotkey"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }
# whisper-rs-sys is needed as a build dep so cargo builds it BEFORE our build.rs
# runs — this is required for the ggml symbol isolation (objcopy patching).
whisper-rs-sys = "0.11"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
anyhow = "1"
verbatim-core = { path = "../verbatim-core" }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
cpal = "0.15"

# macOS: enable Metal GPU acceleration automatically + tray-icon image deps
[target.'cfg(target_os = "macos")'.dependencies]
verbatim-core = { path = "../verbatim-core", features = ["metal"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
whisper-rs-sys = { version = "0.11", features = ["metal"] }

# Linux: no platform-level GPU default — use features below.
# (macOS always gets Metal; Linux chooses vulkan or cuda explicitly.)

[features]
# GPU backend selection (mutually exclusive — pick one):
#   Default: CPU only (no extra dependencies).
#   Vulkan:  portable GPU for NVIDIA + AMD (no toolkit needed).
#   CUDA:    native NVIDIA backend, best performance (requires CUDA toolkit).
#   ROCm:    native AMD backend (requires ROCm/HIP).
#
#   cargo tauri dev                       # CPU (default)
#   cargo tauri dev --features vulkan     # Vulkan
#   cargo tauri dev --features cuda       # CUDA
vulkan = ["verbatim-core/vulkan", "whisper-rs-sys/vulkan"]
cuda = ["verbatim-core/cuda", "whisper-rs-sys/cuda"]
rocm = ["verbatim-core/rocm", "whisper-rs-sys/hipblas"]

[package.metadata.deb]
maintainer = "verbatim contributors"
copyright = "2026 verbatim contributors"
extended-description = "Real-time speech-to-text via microphone with push-to-talk hotkey"
section = "utils"
priority = "optional"
depends = "$auto, libayatana-appindicator3-1, libgtk-3-0, libvulkan1"
recommends = "wtype"
suggests = "xdotool"
assets = [
    ["target/release/verbatim", "usr/bin/", "755"],
    ["../assets/verbatim.desktop", "usr/share/applications/", "644"],
]
