[package]
name = "verbatim-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
async-trait = "0.1"

# Audio capture
cpal = "0.15"

# Noise suppression (RNNoise pure-Rust port)
nnnoiseless = { version = "0.5", default-features = false }

# Local LLM inference (MUST be before whisper-rs so its ggml symbols win
# when the linker resolves duplicates with --allow-multiple-definition)
llama-cpp-2 = "0.1"

# Local STT
whisper-rs = "0.13"

# HTTP / Cloud backends
reqwest = { version = "0.12", features = ["rustls-tls", "multipart", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Keyboard simulation
enigo = "0.2.1"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# XDG directories
dirs = "6"

# OS keyring (Secret Service on Linux, Keychain on macOS)
keyring = { version = "3", features = ["sync-secret-service", "apple-native"] }

# WAV encoding (for cloud API uploads)
hound = "3.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Timestamps & IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Async stream utilities
futures = "0.3"

# Integrity verification
sha2 = "0.10"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
nix = { version = "0.29", features = ["poll"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[features]
# GPU acceleration features — only activate in the final binary (src-tauri)
# where build.rs handles ggml symbol isolation. Enabling them in library
# tests causes ggml symbol conflicts between whisper-rs and llama-cpp-2.
#
# Auto-enabled by platform in src-tauri/Cargo.toml:
#   macOS  → metal  (Apple Silicon GPU)
#   Linux  → vulkan (NVIDIA + AMD auto-detection, CPU fallback)
#
# Optional overrides for Linux power users:
#   cuda   — native NVIDIA backend (requires CUDA toolkit)
#   rocm   — native AMD backend (requires ROCm/HIP)
metal = ["whisper-rs/metal"]
cuda = ["whisper-rs/cuda", "llama-cpp-2/cuda"]
rocm = ["whisper-rs/hipblas", "llama-cpp-2/rocm"]
vulkan = ["whisper-rs/vulkan", "llama-cpp-2/vulkan"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
